tests/neg-custom-args/toplevel-samesource/nested/S.scala
package p
val b = 2 // error: package object S$package in package p has already been compiled once during this run
